--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Stop: It's Giphy time</title>
+    <title>Nutrition Pal</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
-
+<script src ="script.js"></script>
 </body>
 </html>
