--- a/index.html
+++ b/index.html
@@ -2,18 +2,64 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>Nutrition Pal</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!--References to Semantic-UI resource-->
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
+  <meta charset="utf-8">
+  <title>Nutrition Pal</title>
+
+  <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+  <script
+    src="http://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+  <script src="semantic/dist/semantic.min.js"></script>
+
 </head>
+
 <body>
-<script src ="script.js"></script>
+
+  <header>
+
+    <!--Title Area-->
+    <div>
+
+    </div>
+
+    <!--Input Area-->
+    <div>
+
+    </div>
+
+  </header>
+
+  <main>
+    
+    <!--Basic Profile-->
+    <section id="sectionProfile">
+
+    </section>
+
+    <!--Nutrition Info-->
+    <section id="sectionNutrition">
+
+    </section>
+
+    <!--Recipe Suggestions-->
+    <section id="sectionRecipes">
+
+    </section>
+
+  </main>
+
+  <footer>
+
+    <!--Attributions-->
+
+  </footer>
+  
+
+ <script src ="./assets/js/script.js"></script>
 </body>
+
 </html>
