--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+  <link
+    rel="stylesheet"
+    href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+    crossorigin="anonymous"/>
+
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
   <script
