Updated project scope, pseudo, and HTML.

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <header>
 
     <!--Title Area-->
-    <div>
+    <div id="divTitle">
 
     </div>
 
     <!--Input Area-->
-    <div>
+    <div id="divInputs">
 
       <!--Search bar-->
       <div class="ui icon input">
@@ -44,26 +44,36 @@
 
   </header>
 
-  <main>
-    
-    <!--Basic Profile-->
-    <section id="sectionProfile">
+  <main class="ui two column grid">
+    <div class="row">
 
-    </section>
+      <!--General USDA Search Results-->
+      <section id="usdaGeneral" class="column">
 
-    <!--Nutrition Info-->
-    <section id="sectionNutrition">
+      </section>
 
-    </section>
+      <!--Specific USDA Search Results-->
+      <section id="usdaSpecific" class="column">
 
-    <!--Recipe Suggestions-->
-    <section id="sectionRecipes">
+      </section>
+    </div>
 
-    </section>
+    <div class="row">
+
+      <!--Basic Profile-->
+      <section id="foodProfile" class="column">
+
+      </section>
+
+      <!--Recipe Suggestions-->
+      <section id="foodRecipes" class="column">
+
+      </section>
+    <div>
 
   </main>
 
-  <footer>
+  <footer id="divFooter">
 
     <!--Attributions-->
 
