--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Nutrition Pal</title>
+  <title>Food & Recipe Explorer</title>
 
   <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/semantic-ui/semantic.min.css">
@@ -26,26 +26,19 @@
   <header class="ui container">
 
     <!--Title Area-->
-    <h1 class="ui header centered">Project Title</h1>
+    <h1 class="ui header centered">Food & Recipe Explorer</h1>
 
     <!--Input Area-->
     <div id="divInputs" class="ui two column grid stackable centered">
 
       <!--Search Column 1-->
       <div class="column five wide center aligned">
-        <h5 class="ui header">Search Column</h5>
-        <div class="ui icon input">
+        <h5 class="ui header">Search Keyword</h5>
+        <div id="inputDiv" class="ui icon input">
           <input id="inputField" type="text" placeholder="Search...">
           <i id="inputSubmit" class="search link icon"></i>
-          <!--<i class="inverted circular search link icon" id = "searchBar"></i>-->
         </div>
       </div>
-
-      <!--Search Column 2-->
-      <div class="column five wide center aligned">
-        <h5 class="ui header">Search Column</h5>        
-      </div>
-
     </div>
 
   </header>
@@ -66,7 +59,11 @@
         <!--USDA Item Profile-->
         <section class="eight wide column">
           <h5 class="ui header sticky">USDA Item Profile</h5>
-          <div id="foodProfile" class="">
+          <div id="foodProfile">
+            <h4 id="itemName"></h4>
+
+            <!-- Nutrition info goes here -->
+
           </div>
         </section>
 
