finished basic recipe section. Slight edits to HTML header tags

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <!--Search Column 1-->
       <div class="column five wide center aligned">
-        <h5 class="ui header">Search Keyword</h5>
+        <h4 class="ui header">Search Keyword</h4>
         <div id="inputDiv" class="ui icon input">
           <input id="inputField" type="text" placeholder="Search...">
           <i id="inputSubmit" class="search link icon"></i>
@@ -49,7 +49,7 @@
 
         <!--USDA Search Results-->
         <section class="eight wide column">
-          <h5 class="ui header sticky">USDA Search Results</h5>
+          <h4 class="ui header sticky">USDA Search Results</h4>
           <div id="foodResults" class="scrolling">
             <ul id="usdaResultsList">
             </ul>
@@ -58,7 +58,7 @@
 
         <!--USDA Item Profile-->
         <section class="eight wide column">
-          <h5 class="ui header sticky">USDA Item Profile</h5>
+          <h4 class="ui header sticky">USDA Item Profile</h4>
           <div id="foodProfile">
             <h4 id="itemName"></h4>
 
@@ -73,7 +73,7 @@
 
         <!--Recipe Suggestions-->
         <section id="foodRecipes" class="sixteen wide column">
-          <h5 class="ui header">Recipe Suggestions</h5>
+          <h4 class="ui header">Recipe Suggestions</h4>
           <div class="scrolling">
             <ul id="recipeList">
             </ul>
@@ -93,7 +93,7 @@
   </footer>
   
 
- <script src ="./assets/js/script-bk.js"></script>
+ <script src ="./assets/js/script.js"></script>
   
 </body>
 
