Developed code and logic to capture nutrient data from API.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
           <div id="foodProfile">
             <h4 id="itemName"></h4>
 
-            <!-- Nutrition info goes here -->
+            <div id="nutrientInfo" class="scrolling">
+              <ul id="nutrientList">
+                
+              </ul>
+            </div>
 
           </div>
         </section>
