Combined scripts into one and added submit on enter

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
       <div class="column five wide center aligned">
         <h4 class="ui header">Search Keyword</h4>
         <div id="inputDiv" class="ui icon input">
-          <input id="inputField" type="text" placeholder="Search...">
-          <i id="inputSubmit" class="search link icon"></i>
+          <form id="searchForm">
+            <input id="inputField" type="text" placeholder="Search...">
+            <i id="inputSubmit" class="search link icon"></i>
+          </form>
         </div>
       </div>
 
