--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 
   <script
-    src="http://code.jquery.com/jquery-3.4.1.min.js"
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
     crossorigin="anonymous"></script>
   <script src="./assets/css/semantic-ui/semantic.min.js"></script>
